--- a/.github/workflows/buildhtml5.yml
+++ b/.github/workflows/buildhtml5.yml
@@ -1,7 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 # stolen from modding+ lmaooo
 
-name: BuildWin
+name: Buildhtml5
 
 # Controls when the action will run. 
 on:
@@ -57,9 +57,9 @@ jobs:
       - name: Create APIStuff
         run: echo "package;class APIStuff{public static var API:String = '';public static var EncKey:String = '';}" > source/APIStuff.hx
       - name: Compile
-        run: haxelib run lime build windows
+        run: haxelib run lime build html5
       - name: Publish Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: windowsBuild
-          path: export/release/windows/bin
+          name: HTML5Build
+          path: export/release/html5/bin
