--- a/.github/workflows/buildmac.yml
+++ b/.github/workflows/buildmac.yml
@@ -41,6 +41,7 @@ jobs:
           haxelib install flixel-ui
           haxelib install hscript
           haxelib install newgrounds
+          haxelib git flixel-addons https://github.com/HaxeFlixel/flixel-addons
           haxelib git faxe https://github.com/uhrobots/faxe
           haxelib git polymod https://github.com/larsiusprime/polymod.git
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
