--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -38,6 +38,7 @@ jobs:
           haxelib install hscript
           haxelib install flixel-addons
           haxelib install newgrounds
+          haxelib install systools 1.1.0 
           haxelib git faxe https://github.com/uhrobots/faxe
           haxelib git polymod https://github.com/MasterEric/polymod.git
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
