--- a/.github/workflows/windows2.yml
+++ b/.github/workflows/windows2.yml
@@ -46,6 +46,8 @@ jobs:
           haxelib run lime rebuild extension-webm windows
           haxelib git linc_luajit https://github.com/nebulazorua/linc_luajit.git
           haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit
+          haxelib git systools https://github.com/haya3218/systools
+          haxelib run lime rebuild systools windows
           haxelib install actuate 
           haxelib run lime build windows
           
